// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Heap's trackEvent destination action: all fields 1`] = `
Object {
  "app_id": "xqYHVWXiU0In",
<<<<<<< HEAD
  "events": Array [
    Object {
      "custom_properties": Object {
        "testType": "xqYHVWXiU0In",
      },
      "event": "xqYHVWXiU0In",
      "idempotency_key": "xqYHVWXiU0In",
      "properties": Object {
        "segment_library": "xqYHVWXiU0In",
      },
      "timestamp": "2021-02-01T00:00:00.000Z",
      "user_identifier": Object {
        "identity": "xqYHVWXiU0In",
      },
    },
  ],
  "library": "Segment",
=======
  "idempotency_key": "xqYHVWXiU0In",
  "identity": "xqYHVWXiU0In",
  "properties": Object {
    "segment_library": "xqYHVWXiU0In",
    "testType": "xqYHVWXiU0In",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
>>>>>>> 2879de3fa3d77bc77ece7ddb37cf31a75a1d98b5
}
`;

exports[`Testing snapshot for Heap's trackEvent destination action: required fields 1`] = `
Object {
  "app_id": "xqYHVWXiU0In",
<<<<<<< HEAD
  "events": Array [
    Object {
      "custom_properties": Object {},
      "event": "xqYHVWXiU0In",
      "idempotency_key": "xqYHVWXiU0In",
      "properties": Object {
        "segment_library": "destinations-actions",
      },
      "user_identifier": Object {
        "identity": "xqYHVWXiU0In",
      },
    },
  ],
  "library": "Segment",
=======
  "idempotency_key": "xqYHVWXiU0In",
  "identity": "xqYHVWXiU0In",
  "properties": Object {
    "segment_library": "destinations-actions",
  },
>>>>>>> 2879de3fa3d77bc77ece7ddb37cf31a75a1d98b5
}
`;
